# self-host-weekly-md

./: .gitignore  README.md  pyproject.toml
.github/workflows/: selfhst-weekly.yml
newsletters/selfh-st/weekly/: 2026-02-13.md  2026-02-20.md  2026-02-27.md  2026-03-06.md  2026-03-13.md  2026-03-20.md  2026-03-27.md  2026-04-03.md  2026-04-10.md  2026-04-17.md  2026-04-24.md  2026-05-01.md  2026-05-15.md  2026-05-22.md  2026-05-29.md  2026-06-05.md  2026-06-12.md  2026-06-19.md  2026-06-26.md  2026-07-03.md  2026-07-10.md  2026-07-17.md  2026-07-24.md  README.md
selfhst_weekly_md/: __init__.py  archive.py
tests/: test_selfhst_weekly.py  test_workflow_contract.py
